--- a/style.css
+++ b/style.css
@@ -31,6 +31,11 @@ nav {
     color: white;
 }
 
+a {
+    text-decoration: none;
+    color: white;
+}
+
 li{
     padding: 15px;
     display: inline-block;
